--- a/CameraAadLocation/app/src/main/AndroidManifest.xml
+++ b/CameraAadLocation/app/src/main/AndroidManifest.xml
@@ -43,13 +43,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps">
-
-        </activity>
-
+            android:label="@string/title_activity_maps"></activity>
+        <activity
+            android:name=".SignMapsActivity"
+            android:label="@string/title_activity_sign_maps"></activity>
     </application>
 
 </manifest>
